:wrench: small layout changes

--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -3,4 +3,5 @@
   display: grid;
   grid-template-areas: "header" "main" "footer";
   grid-template-rows: auto 1fr auto;
+  background-color: #353435;
 }
