--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -1,5 +1,5 @@
-$primary: #262826;
-$secondary: #e6e7e6;
+$primary: #e6e7e6;
+$secondary: #262826;
 $font-size-base: 1.2rem;
 
 @import "~bootstrap";
